--- a/package.json
+++ b/package.json
@@ -47,6 +47,7 @@
     "react-bootstrap": "^1.0.0-beta.16",
     "react-bootstrap-sweetalert": "4.4.1",
     "react-chartist": "0.13.3",
+    "react-collapsible": "^2.6.2",
     "react-datetime": "2.16.3",
     "react-dom": "^16.10.1",
     "react-google-maps": "9.4.5",
@@ -80,7 +81,7 @@
     "utf8": "^3.0.0"
   },
   "scripts": {
-    "start": "react-scripts start",
+    "start": "react-scripts --max_old_space_size=4096 start",
     "build": "react-scripts build",
     "test": "react-scripts test --env=jsdom",
     "eject": "react-scripts eject",
