--- a/package.json
+++ b/package.json
@@ -1,13 +1,25 @@
 {
-  "name": "material-dashboard-pro-react",
-  "version": "1.5.0",
+  "name": "scapeshift_ada",
+  "version": "0.0.1",
   "private": true,
   "dependencies": {
+    "@ckeditor/ckeditor5-autoformat": "^16.0.0",
+    "@ckeditor/ckeditor5-basic-styles": "^16.0.0",
+    "@ckeditor/ckeditor5-block-quote": "^16.0.0",
+    "@ckeditor/ckeditor5-build-classic": "^16.0.0",
+    "@ckeditor/ckeditor5-build-decoupled-document": "^16.0.0",
+    "@ckeditor/ckeditor5-easy-image": "^16.0.0",
+    "@ckeditor/ckeditor5-editor-classic": "^16.0.0",
+    "@ckeditor/ckeditor5-editor-decoupled": "^16.0.0",
+    "@ckeditor/ckeditor5-essentials": "^16.0.0",
+    "@ckeditor/ckeditor5-heading": "^16.0.0",
+    "@ckeditor/ckeditor5-page-break": "^16.0.0",
+    "@ckeditor/ckeditor5-paragraph": "^16.0.0",
+    "@ckeditor/ckeditor5-react": "^2.1.0",
     "@david.kucsai/react-pdf-table": "^0.1.1",
     "@material-ui/core": "3.9.2",
     "@material-ui/icons": "3.0.2",
     "@material-ui/styles": "^4.0.0-rc.0",
-    "@react-pdf/renderer": "^1.6.3",
     "@types/jest": "^24.0.15",
     "@types/node": "^12.6.8",
     "@types/react": "^16.8.23",
@@ -20,34 +32,24 @@
     "bootstrap": "^4.4.1",
     "chartist": "0.10.1",
     "ckeditor4-react": "^1.0.0",
-    "draft-js": "^0.11.1",
     "face-api.js": "^0.21.0",
     "focus-visible": "^5.0.2",
-    "framer-motion": "^1.6.15",
     "history": "4.7.2",
     "html-to-pdfmake": "^1.2.1",
-    "increase-memory-limit": "^1.0.7",
-    "install": "^0.13.0",
     "mammoth": "^1.4.9",
-    "mdbreact": "^4.21.1",
-    "mgr-pdf-viewer-react": "^1.0.3",
     "moment": "2.24.0",
     "node-sass": "4.11.0",
-    "notiflix-react": "^1.4.0",
     "nouislider": "13.1.0",
     "npm": "^6.13.4",
     "or": "^0.2.0",
-    "pdf-parse": "^1.1.1",
     "pdfmake": "^0.1.63",
     "perfect-scrollbar": "^1.4.0",
-    "popmotion": "^8.7.0",
     "react": "^16.10.1",
     "react-awesome-spinners": "^1.3.1",
     "react-big-calendar": "0.20.3",
     "react-bootstrap": "^1.0.0-beta.16",
     "react-bootstrap-sweetalert": "4.4.1",
     "react-chartist": "0.13.3",
-    "react-collapsible": "^2.6.2",
     "react-datetime": "2.16.3",
     "react-dom": "^16.10.1",
     "react-google-maps": "9.4.5",
@@ -56,33 +58,25 @@
     "react-jsonschema-form-extras": "^0.9.40",
     "react-jvectormap": "0.0.6",
     "react-mt-svg-lines": "^0.9.1",
-    "react-multistep": "^3.6.13",
     "react-pdf": "^4.1.0",
-    "react-progress-button": "^5.1.0",
-    "react-read-pdf": "^2.0.9",
     "react-router-dom": "4.3.1",
-    "react-rte": "^0.16.1",
     "react-s3": "^1.3.1",
     "react-scripts": "2.1.5",
     "react-scroll": "^1.7.14",
     "react-scroll-up": "^1.3.3",
     "react-signature-canvas": "^1.0.3",
     "react-spinners-kit": "^1.9.0",
-    "react-step-wizard": "^5.3.0",
     "react-stepper-horizontal": "^1.0.11",
-    "react-stepzilla": "^6.0.1",
     "react-swipeable-views": "0.13.1",
     "react-table": "6.9.2",
     "react-tagsinput": "3.19.0",
     "react-verification-code-input": "^1.2.2",
     "react-webcam": "^3.1.1",
-    "smoothscroll-polyfill": "^0.4.4",
-    "styled-components": "^4.4.1",
     "utf8": "^3.0.0"
   },
   "scripts": {
     "start": "react-scripts --max_old_space_size=4096 start",
-    "build": "react-scripts build",
+    "build": "react-scripts --max_old_space_size=4096 build",
     "test": "react-scripts test --env=jsdom",
     "eject": "react-scripts eject",
     "deploy": "npm run build",
